--- a/main.css
+++ b/main.css
@@ -20,8 +20,10 @@ h1{
 .container {
     max-width: 800px;
     width: 100%;
-    padding: 8px;
+    padding:8px ;
     margin: 0 auto;
+    display:flex;
+    flex-direction: column;
     align-items:center;
 }
 
